--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
               <p>
                 <li class="intern">Mercurial Minds: Automation Intern</li>
                 <li class="intern">Coffee International: Web Development Intern</li>
+                <li class="intern">ATH Industries: IT Trainee</li>
+
               </p>
 
               <br>
