--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               </div>
               <div class="bars">
                 <div class="info">
-                  <span>Django</span>
+                  <span>React</span>
                   <span>70%</span>
                 </div>
                 <div class="line django"></div>
@@ -155,6 +155,15 @@
             <div class="card">
               <div class="box">
                 <img src="https://i.pinimg.com/736x/1c/4d/40/1c4d40aeb931c44880fd2447711b3d1f.jpg" alt="">
+
+                <div class="text">Interactiv DSA learning page</div>
+                <p>A platform for mastering coding interviews with interactive DSA problems and comprehensive courses.</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="box">
+                <img src="https://i.pinimg.com/originals/90/3d/05/903d05bd99ee716352a4a048bbb645d3.jpg" alt="">
+              
                 <div class="text">Portfolio</div>
                 <p>A sleek and interactive portfolio built with HTML, CSS, and JavaScript.</p>
               </div>
