--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
                 </p>
               </div>
             </div>
+
+            <a href="https://intervix.vercel.app/" class="card-link">
             <div class="card">
               <div class="box">
                 <img src="https://i.pinimg.com/originals/90/3d/05/903d05bd99ee716352a4a048bbb645d3.jpg" alt="">
@@ -162,6 +164,7 @@
                 <p>A platform for mastering coding interviews with interactive DSA problems and comprehensive courses.</p>
               </div>
             </div>
+            
             <div class="card">
               <div class="box">
                 <img src="https://i.pinimg.com/736x/1c/4d/40/1c4d40aeb931c44880fd2447711b3d1f.jpg" alt="">
