--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
               <div class="box">
                 <img src="https://i.pinimg.com/originals/90/3d/05/903d05bd99ee716352a4a048bbb645d3.jpg" alt="">
                 <div class="text">Interactive DSA learning page</div>
-                <p>A platform for mastering coding interviews with interactive DSA problems and comprehensive courses.</p>
+                <p>A platform for mastering coding interviews with interactive DSA problems and comprehensive courses.             
+                  <a href="https://intervix.vercel.app/" >
+</p>
               </div>
             </div>
             
