--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="column right">
               <div class="text">I'm Yahya and I'm a <span class="typing-2"></span></div>
-              <p>Hi there! 👋 I'm Yahya Ehsan, a Computer Science student at Vrije Universiteit Amsterdam with a passion for software development and automation. Currently, I’m an Automations Intern at Mercurial Minds, where I focus on Python-based automation and enhancing Large Language Models (LLMs). I’ve also gained experience as a Software Engineer Intern and a tutor, refining my skills in web design, AJAX integration, and educational support.
+              <p>I'm Yahya Ehsan, a Computer Science student at Vrije Universiteit Amsterdam with a passion for software development and automation. Currently, I’m an Automations Intern at Mercurial Minds, where I focus on Python-based learning. I’ve also gained experience as a Software Developer Intern and a tutor, refining my skills in problem solving, web development, and educational support.
               </p>
               <br>
 
