--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
             <div class="card">
               <div class="box">
-                <img src="https://i.pinimg.com/originals/90/3d/05/903d05bd99ee716352a4a048bbb645d3.jpg" alt="">
+                <img src="https://i.pinimg.com/originals/63/ce/68/63ce682f1129259c600020945b32ed4f.png" alt="">
                 <div class="text">Interactive DSA learning page</div>
                 <p>A platform for mastering coding interviews with interactive DSA problems and comprehensive courses.             
 </p>
