--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                   <ul>
                     <li><a href="https://github.com/yussypu"><i class="fa-brands fa-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/yahya-ehsan-76bb25213/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="https://x.com/PussyYussy/"><i class="fa-brands fa-twitter-in"></i></a></li>
                   </ul>
                 </div>
               </div>
